--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
   </head>
   <!-- class on body set to work with mt-auto on footer to ensure it always stays at the bottom of the page -->
   <body class="d-flex flex-column min-vh-100">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">
+          <img src="assets/images/logo-sm-white.png" alt="Boardwalk Game logo" class="logo">
+        </a>
         <button
           class="navbar-toggler"
           type="button"
