--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
     <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="assets/images/logo-sm-white.png" alt="Boardwalk Game logo" class="logo">
+          <img
+            src="assets/images/logo-sm-white.png"
+            alt="Boardwalk Game logo"
+            class="logo"
+          />
         </a>
         <button
           class="navbar-toggler"
@@ -65,9 +69,21 @@
       </div>
     </nav>
     <!-- Header with Boardwalk Game Text and coursel -->
-    <header class="container">
+    <header class="container section" id="header">
       <div class="row">
-        <div class="col-12 col-xl-6">Boardwalk Game dummy text</div>
+        <div class="col-12 col-xl-6 text-center text-xl-start">
+          <h1 class="display-3">Boardwalk Games</h1>
+          <p class="lead display-6 sub-heading-color">
+            Your next adventure is waiting!
+          </p>
+          <p class="my-4">
+            Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! Escape
+            into the world of board games and café delights. Whether you're a
+            casual gamer seeking a cosy nook to unwind, a board game enthusiast
+            ready for your next challenge, or a student gamer looking for a fun,
+            affordable hangout, we've got you covered.
+          </p>
+        </div>
         <div class="col-12 col-xl-6">Coursell</div>
       </div>
     </header>
