--- a/game-library.html
+++ b/game-library.html
@@ -35,12 +35,118 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body class="d-flex flex-column min-vh-100">
-    <div>Navigation</div>
+    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img
+            src="assets/images/logo-sm-white.png"
+            alt="Boardwalk Game logo"
+            class="logo"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="#">Services</a>
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="game-library.html"
+              >Game</a
+            >
+            <a class="nav-link" href="#">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <!-- Header Section with Game Library text and cursel -->
-    <header class="container">
+    <header class="container section" id="header">
       <div class="row">
-        <div class="col-12 col-xl-6">Game Library intro text section</div>
-        <div class="col-12 col-xl-6">Carousel</div>
+        <div class="col-12 col-xl-6 text-center text-xl-start">
+          <h1 class="display-3">Game Library</h1>
+          <p class="lead display-6 sub-heading-color">
+            Discover new games to rent or buy
+          </p>
+          <p class="my-4">
+            Dive into a world of adventure, strategy, and fun with our carefully
+            curated collection of board games to rent or buy. From timeless
+            classics to the latest sensations, our shelves are packed with games
+            waiting to be discovered.
+          </p>
+        </div>
+        <div class="col-12 col-xl-6">
+          <div
+            id="carouselExampleAutoplaying"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="assets/images/game-library-carousel-1.webp"
+                  class="d-block w-100"
+                  alt="Bookshelves filled with boardgames"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/images/game-library-carousel-2.webp"
+                  class="d-block w-100"
+                  alt="Bookshelves filled with boardgames"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/images/game-library-carousel-3.webp"
+                  class="d-block w-100"
+                  alt="Bookshelves filled with boardgames, one man is browsing the shelves"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/images/game-library-carousel-4.webp"
+                  class="d-block w-100"
+                  alt="8 board games stacked on top of each other"
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleAutoplaying"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleAutoplaying"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
       </div>
     </header>
     <!-- Main Game Library Section -->
@@ -76,5 +182,14 @@
         </div>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/6fad5dcb23.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
