edit size of the card-body to adjust with different screen

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
           <div class="col-12 text-center">
             <h2 class="display-6">Services</h2>
           </div>
-          <div class="col-12 col-md-6 col-xl-3" id="gap">
-            <div class="card h-100">
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
               <img
                 src="assets/images/services-1.webp"
                 class="card-img-top"
@@ -189,8 +189,8 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-xl-3" id="gap">
-            <div class="card h-100">
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
               <img
                 src="assets/images/services-2.webp"
                 class="card-img-top"
@@ -210,8 +210,8 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-xl-3" id="gap">
-            <div class="card h-100">
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
               <img src="assets/images/services-3.webp" class="card-img-top" />
               <div class="card-body">
                 <h3 class="card-title sub-heading-color">Events</h3>
@@ -226,8 +226,8 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-xl-3" id="gap">
-            <div class="card h-100">
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card">
               <img
                 src="assets/images/services-4.webp"
                 class="card-img-top"
