--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <a class="nav-link active" aria-current="page" href="index.html"
               >Home</a
             >
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="#services">Services</a>
             <a class="nav-link" href="game-library.html">Game</a>
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </div>
         </div>
       </div>
@@ -280,7 +280,7 @@
               <br />
               <span><i class="bi bi-send"></i></span> info@boardwalk.game.co
             </p>
-            <div class="social-links mt-4">
+            <div class="social-links my-4">
               <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-instagram" aria-label="Visit our instagram (open in a new tap)"></i>
               </a>
@@ -295,37 +295,37 @@
         <!-- Opening times -->
         <div class="col-12 col-md-6 col-xl-4">
           <h3 class="sub-heading-color">Opening times</h3>
-          <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Day</th>
-      <th scope="col">Open</th>
-      <th scope="col">Close</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">Monday</th>
-      <td>Closed</td>
-      <td></td>
-    </tr>
-    <tr>
-      <th scope="row">Tue - Thur</th>
-      <td>11 am</td>
-      <td>11 pm</td>
-    </tr>
-    <tr>
-      <th scope="row">Fri - Sat</th>
-      <td >11 am</td>
-      <td>12 am</td>
-    </tr>
-    <tr>
-      <th scope="row">Sun</th>
-      <td >12 pm</td>
-      <td>7 pm</td>
-    </tr>
-  </tbody>
-</table>
+          <table class="table table-dark">
+            <thead>
+              <tr>
+                <th scope="col">Day</th>
+                <th scope="col">Open</th>
+                <th scope="col">Close</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Monday</th>
+                <td>Closed</td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="row">Tue - Thur</th>
+                <td>11 am</td>
+                <td>11 pm</td>
+              </tr>
+              <tr>
+                <th scope="row">Fri - Sat</th>
+                <td >11 am</td>
+                <td>12 am</td>
+              </tr>
+              <tr>
+                <th scope="row">Sun</th>
+                <td >12 pm</td>
+                <td>7 pm</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </footer>
