--- a/game-library.html
+++ b/game-library.html
@@ -62,7 +62,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link" href="index.html">Home</a>
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="index.html#services">Services</a>
             <a
               class="nav-link active"
               aria-current="page"
