--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <a class="nav-link" href="#services">Services</a>
             <a class="nav-link" href="game-library.html">Game</a>
             <a class="nav-link" href="#contact">Contact</a>
+            <a class="btn btn-primary ms-lg-3" href="booking.html">Book now</a>
           </div>
         </div>
       </div>
@@ -86,7 +87,9 @@
             casual gamer seeking a cosy nook to unwind, a board game enthusiast
             ready for your next challenge, or a student gamer looking for a fun,
             affordable hangout, we've got you covered.
+            
           </p>
+          <a class="btn btn-primary mb-4" href="booking.html" >Book now</a>
         </div>
         <div class="col-12 col-xl-6">
           <div
