--- a/game-library.html
+++ b/game-library.html
@@ -70,7 +70,7 @@
               >Game</a
             >
             <a class="nav-link" href="index.html#contact">Contact</a>
-            <a class="btn btn-primary ms-lg-3" href="booking.html" >Book now</a>
+            <a class="btn custom-btn-filled ms-lg-3" href="booking.html" >Book now</a>
           </div>
         </div>
       </div>
