--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a class="nav-link" href="#services">Services</a>
             <a class="nav-link" href="game-library.html">Game</a>
             <a class="nav-link" href="#contact">Contact</a>
-            <a class="btn btn-primary ms-lg-3" href="booking.html">Book now</a>
+            <a class="btn custom-btn-filled ms-lg-3" href="booking.html">Book now</a>
           </div>
         </div>
       </div>
@@ -89,7 +89,7 @@
             affordable hangout, we've got you covered.
             
           </p>
-          <a class="btn btn-primary mb-4" href="booking.html" >Book now</a>
+          <a class="btn custom-btn-outline mb-4" href="booking.html" >Book now</a>
         </div>
         <div class="col-12 col-xl-6">
           <div
