--- a/booking.html
+++ b/booking.html
@@ -63,75 +63,101 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link" href="index.html">Home</a>
             <a class="nav-link" href="index.html#services">Services</a>
-            <a
-              class="nav-link "
-              
-              href="game-library.html"
-              >Game</a
-            >
+            <a class="nav-link" href="game-library.html">Game</a>
             <a class="nav-link" href="index.html#contact">Contact</a>
-            <a class="btn custom-btn-filled ms-lg-3" href="booking.html"  aria-current="page">Book now</a>
+            <a
+              class="btn custom-btn-filled ms-lg-3"
+              href="booking.html"
+              aria-current="page"
+              >Book now</a
+            >
           </div>
         </div>
       </div>
     </nav>
     <header id="header" class="container section">
-    <div class="row justify-content-center">
+      <div class="row justify-content-center">
         <div class="col-12 col-md-8 text-center text-xl-start">
-            <h1 class="display-3">Boardwalk Games</h1>
-            <p class="my-4">
-                Thank you for choosing to reserve a spot at Boardwalk Games! Please
-                fill out the form below with your details and preferred event. A
-                member of our team will call you back as soon as possible to confirm
-                your booking and answer any questions you may have.
-            </p>
+          <h1 class="display-3">Boardwalk Games</h1>
+          <p class="my-4">
+            Thank you for choosing to reserve a spot at Boardwalk Games! Please
+            fill out the form below with your details and preferred event. A
+            member of our team will call you back as soon as possible to confirm
+            your booking and answer any questions you may have.
+          </p>
         </div>
-    </div>
-</header>
-<main>
-    <!-- Booking inquiry form section -->
-    <section id="booking-form" class="container section">
+      </div>
+    </header>
+    <main>
+      <!-- Booking inquiry form section -->
+      <section id="booking-form" class="container section">
         <div class="row justify-content-center">
-            <div class="col-12 col-md-8">
-                <h2>Booking inquiry</h2>
-                <form action="sucess.html" method="GET">
-                    <div class="row">
-                        <div class="col-12 col-lg-6 mb-3">
-                            <label for="name" class="form-label">Name</label>
-                            <input class="form-control" id="name" name="name" type="text" required>
-                        </div>
-                        <div class="col-12 col-lg-6 mb-3">
-                            <label for="email" class="form-label">Email</label>
-                            <input class="form-control" id="email" name="email" type="email" required>
-                        </div>
-                        <div class="col-12 col-lg-6 mb-3">
-                            <label for="phone" class="form-label">Phone number</label>
-                            <input class="form-control" id="phone" name="phone" type="number" required>
-                        </div>
-                        <div class="col-12 col-lg-6 mb-3">
-                            <label for="event-type" class="form-label">Event type</label>
-                            <select id="event-type" class="form-select" required>
-                                <option value="" selected>Select</option>
-                                <option value="regular-play">Reserve a table</option>
-                                <option value="dnd">Dungeons & Dragons</option>
-                                <option value="retro-night">Retro Game Night</option>
-                                <option value="tournament">Tournament</option>
-                                <option value="kids-party">Kids party</option>
-                            </select>
-                        </div>
-                        <div class="col-12 mb-3">
-                            <label for="message" class="form-label">Message</label>
-                            <textarea class="form-control" rows="6" id="message" name="message" required></textarea>
-                        </div>
-                    </div>
+          <div class="col-12 col-md-8">
+            <h2>Booking inquiry</h2>
+            <form action="sucess.html" method="GET">
+              <div class="row">
+                <div class="col-12 col-lg-6 mb-3">
+                  <label for="name" class="form-label">Name</label>
+                  <input
+                    class="form-control"
+                    id="name"
+                    name="name"
+                    type="text"
+                    required
+                  />
+                </div>
+                <div class="col-12 col-lg-6 mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input
+                    class="form-control"
+                    id="email"
+                    name="email"
+                    type="email"
+                    required
+                  />
+                </div>
+                <div class="col-12 col-lg-6 mb-3">
+                  <label for="phone" class="form-label">Phone number</label>
+                  <input
+                    class="form-control"
+                    id="phone"
+                    name="phone"
+                    type="number"
+                    required
+                  />
+                </div>
+                <div class="col-12 col-lg-6 mb-3">
+                  <label for="event-type" class="form-label">Event type</label>
+                  <select id="event-type" class="form-select" required>
+                    <option value="" selected>Select</option>
+                    <option value="regular-play">Reserve a table</option>
+                    <option value="dnd">Dungeons & Dragons</option>
+                    <option value="retro-night">Retro Game Night</option>
+                    <option value="tournament">Tournament</option>
+                    <option value="kids-party">Kids party</option>
+                  </select>
+                </div>
+                <div class="col-12 mb-3">
+                  <label for="message" class="form-label">Message</label>
+                  <textarea
+                    class="form-control"
+                    rows="6"
+                    id="message"
+                    name="message"
+                    required
+                  ></textarea>
+                </div>
+              </div>
 
-                    <button type="submit" class="btn custom-btn-outline">Submit</button>
-                </form>
-            </div>
+              <button type="submit" class="btn custom-btn-outline">
+                Submit
+              </button>
+            </form>
+          </div>
         </div>
-    </section>
-</main>
-   
+      </section>
+    </main>
+
     <!-- Footer Section -->
     <footer id="contact" class="mt-auto">
       <div class="container section">
@@ -159,51 +185,73 @@
               <span><i class="bi bi-send"></i></span> info@boardwalk.game.co
             </p>
             <div class="social-links my-4">
-              <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
-                <i class="bi bi-instagram" aria-label="Visit our instagram (open in a new tap)"></i>
+              <a
+                href="https://www.instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <i
+                  class="bi bi-instagram"
+                  aria-label="Visit our instagram (open in a new tap)"
+                ></i>
               </a>
-              <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
-                <i class="bi bi-facebook" aria-label="Visit our facebook (open in a new tap)"></i>
+              <a
+                href="https://www.facebook.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <i
+                  class="bi bi-facebook"
+                  aria-label="Visit our facebook (open in a new tap)"
+                ></i>
               </a>
-              <a href="https://www.twitter.com" target="_blank" rel="noopener noreferrer">
-                <i class="bi bi-twitter-x" aria-label="Visti our twitter (open in a new tap)"></i>
+              <a
+                href="https://www.twitter.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <i
+                  class="bi bi-twitter-x"
+                  aria-label="Visti our twitter (open in a new tap)"
+                ></i>
               </a>
             </div>
-        </div>
-        <!-- Opening times -->
-        <div class="col-12 col-md-6 col-xl-4">
-          <h3 class="sub-heading-color">Opening times</h3>
-          <table class="table table-dark">
-            <thead>
-              <tr>
-                <th scope="col">Day</th>
-                <th scope="col">Open</th>
-                <th scope="col">Close</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Monday</th>
-                <td>Closed</td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row">Tue - Thur</th>
-                <td>11 am</td>
-                <td>11 pm</td>
-              </tr>
-              <tr>
-                <th scope="row">Fri - Sat</th>
-                <td >11 am</td>
-                <td>12 am</td>
-              </tr>
-              <tr>
-                <th scope="row">Sun</th>
-                <td >12 pm</td>
-                <td>7 pm</td>
-              </tr>
-            </tbody>
-          </table>
+          </div>
+          <!-- Opening times -->
+          <div class="col-12 col-md-6 col-xl-4">
+            <h3 class="sub-heading-color">Opening times</h3>
+            <table class="table table-dark">
+              <thead>
+                <tr>
+                  <th scope="col">Day</th>
+                  <th scope="col">Open</th>
+                  <th scope="col">Close</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">Monday</th>
+                  <td>Closed</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th scope="row">Tue - Thur</th>
+                  <td>11 am</td>
+                  <td>11 pm</td>
+                </tr>
+                <tr>
+                  <th scope="row">Fri - Sat</th>
+                  <td>11 am</td>
+                  <td>12 am</td>
+                </tr>
+                <tr>
+                  <th scope="row">Sun</th>
+                  <td>12 pm</td>
+                  <td>7 pm</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </footer>
