--- a/sucess.html
+++ b/sucess.html
@@ -63,27 +63,29 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link" href="index.html">Home</a>
             <a class="nav-link" href="index.html#services">Services</a>
-            <a
-              class="nav-link "
-              
-              href="game-library.html"
-              >Game</a
-            >
+            <a class="nav-link" href="game-library.html">Game</a>
             <a class="nav-link" href="index.html#contact">Contact</a>
-            <a class="btn btn-primary ms-lg-3" href="booking.html"  aria-current="page">Book now</a>
+            <a
+              class="btn btn-primary ms-lg-3"
+              href="booking.html"
+              aria-current="page"
+              >Book now</a
+            >
           </div>
         </div>
       </div>
     </nav>
     <!-- Main Content -->
-     <main>
-        <section class="container text-center mt-4">
-            <h1 class="display-1">thank you</h1>
-            <p class="h5 mb-4">your form has been submitted successfully</p>
-            <a class="btn custom-btn-outline" href="index.html">Return to main page</a>
-        </section>
-     </main>
-   
+    <main>
+      <section class="container text-center mt-4">
+        <h1 class="display-1">thank you</h1>
+        <p class="h5 mb-4">your form has been submitted successfully</p>
+        <a class="btn custom-btn-outline" href="index.html"
+          >Return to main page</a
+        >
+      </section>
+    </main>
+
     <!-- Footer Section -->
     <footer id="contact" class="mt-auto">
       <div class="container section">
@@ -111,51 +113,73 @@
               <span><i class="bi bi-send"></i></span> info@boardwalk.game.co
             </p>
             <div class="social-links my-4">
-              <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
-                <i class="bi bi-instagram" aria-label="Visit our instagram (open in a new tap)"></i>
+              <a
+                href="https://www.instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <i
+                  class="bi bi-instagram"
+                  aria-label="Visit our instagram (open in a new tap)"
+                ></i>
               </a>
-              <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
-                <i class="bi bi-facebook" aria-label="Visit our facebook (open in a new tap)"></i>
+              <a
+                href="https://www.facebook.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <i
+                  class="bi bi-facebook"
+                  aria-label="Visit our facebook (open in a new tap)"
+                ></i>
               </a>
-              <a href="https://www.twitter.com" target="_blank" rel="noopener noreferrer">
-                <i class="bi bi-twitter-x" aria-label="Visti our twitter (open in a new tap)"></i>
+              <a
+                href="https://www.twitter.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <i
+                  class="bi bi-twitter-x"
+                  aria-label="Visti our twitter (open in a new tap)"
+                ></i>
               </a>
             </div>
-        </div>
-        <!-- Opening times -->
-        <div class="col-12 col-md-6 col-xl-4">
-          <h3 class="sub-heading-color">Opening times</h3>
-          <table class="table table-dark">
-            <thead>
-              <tr>
-                <th scope="col">Day</th>
-                <th scope="col">Open</th>
-                <th scope="col">Close</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Monday</th>
-                <td>Closed</td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row">Tue - Thur</th>
-                <td>11 am</td>
-                <td>11 pm</td>
-              </tr>
-              <tr>
-                <th scope="row">Fri - Sat</th>
-                <td >11 am</td>
-                <td>12 am</td>
-              </tr>
-              <tr>
-                <th scope="row">Sun</th>
-                <td >12 pm</td>
-                <td>7 pm</td>
-              </tr>
-            </tbody>
-          </table>
+          </div>
+          <!-- Opening times -->
+          <div class="col-12 col-md-6 col-xl-4">
+            <h3 class="sub-heading-color">Opening times</h3>
+            <table class="table table-dark">
+              <thead>
+                <tr>
+                  <th scope="col">Day</th>
+                  <th scope="col">Open</th>
+                  <th scope="col">Close</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">Monday</th>
+                  <td>Closed</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th scope="row">Tue - Thur</th>
+                  <td>11 am</td>
+                  <td>11 pm</td>
+                </tr>
+                <tr>
+                  <th scope="row">Fri - Sat</th>
+                  <td>11 am</td>
+                  <td>12 am</td>
+                </tr>
+                <tr>
+                  <th scope="row">Sun</th>
+                  <td>12 pm</td>
+                  <td>7 pm</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </footer>
