add event section and style that for different devices

--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
     </header>
     <!-- Main element hold all key section of the home page. its not part of the grid structure -->
     <main>
+      <!-- Services Section -->
       <section id="services" class="container section">
         <div class="row">
           <div class="col-12 text-center">
@@ -255,6 +256,69 @@
                 <p class="mb-0">From €7 per child</p>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+      <!-- Event Section -->
+      <section id="events" class="container section">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2 class="display-6">Join our events</h2>
+          </div>
+          <div class="col-12 col-md-6 col-lg-6 col-xl-6">
+            <p>
+              Whether you're delving into dungeons, reliving classic games, or
+              competing in high-stakes tournaments, there's something for every
+              gamer. Reservations are recommended to ensure your spot at the
+              table. Student discounts are available, so bring your student ID
+              and enjoy more gaming for less.
+            </p>
+            <p class="mb-3">
+              Outside scheduled events, our shop remains open for regular play.
+              Join us anytime to discover new games and meet fellow enthusiasts.
+            </p>
+          </div>
+          <div class="col-12 col-md-6 col-lg-6 col-xl-6">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Event</th>
+                  <th scope="col">Date</th>
+                  <th scope="col">Time</th>
+                  <th scope="col">Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">Dungeons & Dragons</th>
+                  <td>Tuesdays</td>
+                  <td>8pm - 11pm</td>
+                  <td>£25 for 6 sessions</td>
+                </tr>
+                <tr>
+                  <th scope="row">Retro Game Night</th>
+                  <td>Thursdays</td>
+                  <td>8pm - 11pm</td>
+                  <td>£5 per person*</td>
+                </tr>
+                <tr>
+                  <th scope="row">Tournaments</th>
+                  <td>Last Sunday of the month</td>
+                  <td>12pm - 7pm</td>
+                  <td>£10 per person</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <div
+            class="col-md-6 col-lg-5 col-xl-4 text-md-center offset-xl-7 offset-md-3 offset-lg-7 student"
+          >
+            <p class="student-discount">*Get 20% off with valid student ID</p>
+          </div>
+
+          <div class="col-12 text-center">
+            <a class="btn custom-btn-outline" href="booking.html">Book now</a>
           </div>
         </div>
       </section>
