--- a/game-library.html
+++ b/game-library.html
@@ -63,6 +63,7 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link" href="index.html">Home</a>
             <a class="nav-link" href="index.html#services">Services</a>
+            <a class="nav-link" href="index.html#event">Event</a>
             <a
               class="nav-link active"
               aria-current="page"
@@ -327,7 +328,7 @@
         </div>
       </section>
       <!-- Reservation Game Section -->
-      <section class="container section">
+      <section class="container section reserve-game">
         <div class="row">
           <div class="col-12">
             <h2 class="text-center">Reserve a game</h2>
