--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
               >Home</a
             >
             <a class="nav-link" href="#services">Services</a>
+            <a class="nav-link" href="#events">Event</a>
             <a class="nav-link" href="game-library.html">Game</a>
             <a class="nav-link" href="#contact">Contact</a>
             <a class="btn custom-btn-filled ms-lg-3" href="booking.html"
